tests/snapshots/typeck__fail_field_override-ast.snap
---
source: tests/typeck.rs
description: "class Base {\n    same_ty : Int;\n    different_ty : Int;\n};\n\nclass Derived inherits Base {\n    same_ty : Int;\n    different_ty : String;\n};\n\nclass Main inherits Derived {\n    main(): Object {\n        0\n    };\n};\n"
expression: "SnapshotData { failed, classes: &classes }"
---
SnapshotData(
  failed: true,
  classes: [
    Class(
      name: TyName(Name(Spanned(
        value: "Base",
        span: Span(
          start: Position(
            src: Some(SourceId(1)),
            byte: 6,
            line: 1,
            col: 7,
          ),
          end: Position(
            src: Some(SourceId(1)),
            byte: 9,
            line: 1,
            col: 10,
          ),
        ),
      ))),
      inherits: None,
      features: [
        Field(Field(Binding(
          name: Name(Spanned(
            value: "same_ty",
            span: Span(
              start: Position(
                src: Some(SourceId(1)),
                byte: 17,
                line: 2,
                col: 5,
              ),
              end: Position(
                src: Some(SourceId(1)),
                byte: 23,
                line: 2,
                col: 11,
              ),
            ),
          )),
          binding_id: SerKey(
            idx: 2,
            version: 1,
          ),
          ty_name: TyName(Name(Spanned(
            value: "Int",
            span: Span(
              start: Position(
                src: Some(SourceId(1)),
                byte: 27,
                line: 2,
                col: 15,
              ),
              end: Position(
                src: Some(SourceId(1)),
                byte: 29,
                line: 2,
                col: 17,
              ),
            ),
          ))),
          init: None,
          span: Span(
            start: Position(
              src: Some(SourceId(1)),
              byte: 17,
              line: 2,
              col: 5,
            ),
            end: Position(
              src: Some(SourceId(1)),
              byte: 23,
              line: 2,
              col: 11,
            ),
          ),
          ty: Resolved(Builtin(Int)),
        ))),
        Field(Field(Binding(
          name: Name(Spanned(
            value: "different_ty",
            span: Span(
              start: Position(
                src: Some(SourceId(1)),
                byte: 36,
                line: 3,
                col: 5,
              ),
              end: Position(
                src: Some(SourceId(1)),
                byte: 47,
                line: 3,
                col: 16,
              ),
            ),
          )),
          binding_id: SerKey(
            idx: 3,
            version: 1,
          ),
          ty_name: TyName(Name(Spanned(
            value: "Int",
            span: Span(
              start: Position(
                src: Some(SourceId(1)),
                byte: 51,
                line: 3,
                col: 20,
              ),
              end: Position(
                src: Some(SourceId(1)),
                byte: 53,
                line: 3,
                col: 22,
              ),
            ),
          ))),
          init: None,
          span: Span(
            start: Position(
              src: Some(SourceId(1)),
              byte: 36,
              line: 3,
              col: 5,
            ),
            end: Position(
              src: Some(SourceId(1)),
              byte: 47,
              line: 3,
              col: 16,
            ),
          ),
          ty: Resolved(Builtin(Int)),
        ))),
      ],
      span: Span(
        start: Position(
          src: Some(SourceId(1)),
          byte: 0,
          line: 1,
          col: 1,
        ),
        end: Position(
          src: Some(SourceId(1)),
          byte: 4,
          line: 1,
          col: 5,
        ),
      ),
      ty: Resolved(Class("Base")),
    ),
    Class(
      name: TyName(Name(Spanned(
        value: "Derived",
        span: Span(
          start: Position(
            src: Some(SourceId(1)),
            byte: 66,
            line: 6,
            col: 7,
          ),
          end: Position(
            src: Some(SourceId(1)),
            byte: 72,
            line: 6,
            col: 13,
          ),
        ),
      ))),
      inherits: Some(TyName(Name(Spanned(
        value: "Base",
        span: Span(
          start: Position(
            src: Some(SourceId(1)),
            byte: 83,
            line: 6,
            col: 24,
          ),
          end: Position(
            src: Some(SourceId(1)),
            byte: 86,
            line: 6,
            col: 27,
          ),
        ),
      )))),
      features: [
        Field(Field(Binding(
          name: Name(Spanned(
            value: "same_ty",
            span: Span(
              start: Position(
                src: Some(SourceId(1)),
                byte: 94,
                line: 7,
                col: 5,
              ),
              end: Position(
                src: Some(SourceId(1)),
                byte: 100,
                line: 7,
                col: 11,
              ),
            ),
          )),
          binding_id: SerKey(
            idx: 4294967295,
            version: 1,
          ),
          ty_name: TyName(Name(Spanned(
            value: "Int",
            span: Span(
              start: Position(
                src: Some(SourceId(1)),
                byte: 104,
                line: 7,
                col: 15,
              ),
              end: Position(
                src: Some(SourceId(1)),
                byte: 106,
                line: 7,
                col: 17,
              ),
            ),
          ))),
          init: None,
          span: Span(
            start: Position(
              src: Some(SourceId(1)),
              byte: 94,
              line: 7,
              col: 5,
            ),
            end: Position(
              src: Some(SourceId(1)),
              byte: 100,
              line: 7,
              col: 11,
            ),
          ),
          ty: Resolved(Builtin(Int)),
        ))),
        Field(Field(Binding(
          name: Name(Spanned(
            value: "different_ty",
            span: Span(
              start: Position(
                src: Some(SourceId(1)),
                byte: 113,
                line: 8,
                col: 5,
              ),
              end: Position(
                src: Some(SourceId(1)),
                byte: 124,
                line: 8,
                col: 16,
              ),
            ),
          )),
          binding_id: SerKey(
            idx: 4294967295,
            version: 1,
          ),
          ty_name: TyName(Name(Spanned(
            value: "String",
            span: Span(
              start: Position(
                src: Some(SourceId(1)),
                byte: 128,
                line: 8,
                col: 20,
              ),
              end: Position(
                src: Some(SourceId(1)),
                byte: 133,
                line: 8,
                col: 25,
              ),
            ),
          ))),
          init: None,
          span: Span(
            start: Position(
              src: Some(SourceId(1)),
              byte: 113,
              line: 8,
              col: 5,
            ),
            end: Position(
              src: Some(SourceId(1)),
              byte: 124,
              line: 8,
              col: 16,
            ),
          ),
          ty: Resolved(Builtin(String)),
        ))),
      ],
      span: Span(
        start: Position(
          src: Some(SourceId(1)),
          byte: 60,
          line: 6,
          col: 1,
        ),
        end: Position(
          src: Some(SourceId(1)),
          byte: 64,
          line: 6,
          col: 5,
        ),
      ),
      ty: Resolved(Class("Derived")),
    ),
    Class(
      name: TyName(Name(Spanned(
        value: "Main",
        span: Span(
          start: Position(
            src: Some(SourceId(1)),
            byte: 146,
            line: 11,
            col: 7,
          ),
          end: Position(
            src: Some(SourceId(1)),
            byte: 149,
            line: 11,
            col: 10,
          ),
        ),
      ))),
      inherits: Some(TyName(Name(Spanned(
        value: "Derived",
        span: Span(
          start: Position(
            src: Some(SourceId(1)),
            byte: 160,
            line: 11,
            col: 21,
          ),
          end: Position(
            src: Some(SourceId(1)),
            byte: 166,
            line: 11,
            col: 27,
          ),
        ),
      )))),
      features: [
        Method(Method(
          name: Name(Spanned(
            value: "main",
            span: Span(
              start: Position(
                src: Some(SourceId(1)),
                byte: 174,
                line: 12,
                col: 5,
              ),
              end: Position(
                src: Some(SourceId(1)),
                byte: 177,
                line: 12,
                col: 8,
              ),
            ),
          )),
          params: [],
          return_ty: TyName(Name(Spanned(
            value: "Object",
            span: Span(
              start: Position(
                src: Some(SourceId(1)),
                byte: 182,
                line: 12,
                col: 13,
              ),
              end: Position(
                src: Some(SourceId(1)),
                byte: 187,
                line: 12,
                col: 18,
              ),
            ),
          ))),
          body: Int(IntLit(Spanned(
            value: 0,
            span: Span(
              start: Position(
                src: Some(SourceId(1)),
                byte: 199,
                line: 13,
                col: 9,
              ),
              end: Position(
                src: Some(SourceId(1)),
                byte: 199,
                line: 13,
                col: 9,
              ),
            ),
          ))),
          span: Span(
            start: Position(
              src: Some(SourceId(1)),
              byte: 174,
              line: 12,
              col: 5,
            ),
            end: Position(
              src: Some(SourceId(1)),
              byte: 177,
              line: 12,
              col: 8,
            ),
          ),
          ty: Resolved(Function(FunctionTy(
            params: [],
            ret: Builtin(Object),
          ))),
        )),
      ],
      span: Span(
        start: Position(
          src: Some(SourceId(1)),
          byte: 140,
          line: 11,
          col: 1,
        ),
        end: Position(
          src: Some(SourceId(1)),
          byte: 144,
          line: 11,
          col: 5,
        ),
      ),
      ty: Resolved(Class("Main")),
    ),
  ],
)
