tests/snapshots/typeck__fail_field_override-diagnostics.snap
---
source: tests/typeck.rs
description: "class Base {\n    same_ty : Int;\n    different_ty : Int;\n};\n\nclass Derived inherits Base {\n    same_ty : Int;\n    different_ty : String;\n};\n\nclass Main inherits Derived {\n    main(): Object {\n        0\n    };\n};\n"
expression: "&diagnostics"
---
[
    Diagnostic {
        level: Error,
        message: DiagnosticMessage {
            span: Some(
                Span(7:5-11, bytes 94-100 in Some(SourceId(1))),
            ),
            message: "detected multiple definition: field `same_ty` is already defined in a superclass",
        },
        source: Some(
            MultipleDefinition {
                kind: Field {
                    inherited: true,
                },
                name: Name {
                    span: Span(7:5-11, bytes 94-100 in Some(SourceId(1))),
                    value: b"same_ty",
                },
                previous: UserCode(
                    Span(2:5-11, bytes 17-23 in Some(SourceId(1))),
                ),
            },
        ),
    },
    Diagnostic {
        level: Error,
        message: DiagnosticMessage {
            span: Some(
                Span(8:5-16, bytes 113-124 in Some(SourceId(1))),
            ),
            message: "detected multiple definition: field `different_ty` is already defined in a superclass",
        },
        source: Some(
            MultipleDefinition {
                kind: Field {
                    inherited: true,
                },
                name: Name {
                    span: Span(8:5-16, bytes 113-124 in Some(SourceId(1))),
                    value: b"different_ty",
                },
                previous: UserCode(
                    Span(3:5-16, bytes 36-47 in Some(SourceId(1))),
                ),
            },
        ),
    },
]
