tests/snapshots/typeck__fail_main_method_wrong_signature-ast.snap
---
source: tests/typeck.rs
description: "class Main {\n    main(this_isnt_supposed_to_go_here : Int): Int {\n        0\n    };\n};\n"
expression: "SnapshotData { failed, classes: &classes }"
---
SnapshotData(
  failed: true,
  classes: [
    Class(
      name: TyName(Name(Spanned(
        value: "Main",
        span: Span(
          start: Position(
            src: Some(SourceId(1)),
            byte: 6,
            line: 1,
            col: 7,
          ),
          end: Position(
            src: Some(SourceId(1)),
            byte: 9,
            line: 1,
            col: 10,
          ),
        ),
      ))),
      inherits: None,
      features: [
        Method(Method(
          name: Name(Spanned(
            value: "main",
            span: Span(
              start: Position(
                src: Some(SourceId(1)),
                byte: 17,
                line: 2,
                col: 5,
              ),
              end: Position(
                src: Some(SourceId(1)),
                byte: 20,
                line: 2,
                col: 8,
              ),
            ),
          )),
          params: [
            Formal(
              name: Name(Spanned(
                value: "this_isnt_supposed_to_go_here",
                span: Span(
                  start: Position(
                    src: Some(SourceId(1)),
                    byte: 22,
                    line: 2,
                    col: 10,
                  ),
                  end: Position(
                    src: Some(SourceId(1)),
                    byte: 50,
                    line: 2,
                    col: 38,
                  ),
                ),
              )),
              ty_name: TyName(Name(Spanned(
                value: "Int",
                span: Span(
                  start: Position(
                    src: Some(SourceId(1)),
                    byte: 54,
                    line: 2,
                    col: 42,
                  ),
                  end: Position(
                    src: Some(SourceId(1)),
                    byte: 56,
                    line: 2,
                    col: 44,
                  ),
                ),
              ))),
              span: Span(
                start: Position(
                  src: Some(SourceId(1)),
                  byte: 22,
                  line: 2,
                  col: 10,
                ),
                end: Position(
                  src: Some(SourceId(1)),
                  byte: 50,
                  line: 2,
                  col: 38,
                ),
              ),
              ty: Resolved(Builtin(Int)),
            ),
          ],
          return_ty: TyName(Name(Spanned(
            value: "Int",
            span: Span(
              start: Position(
                src: Some(SourceId(1)),
                byte: 60,
                line: 2,
                col: 48,
              ),
              end: Position(
                src: Some(SourceId(1)),
                byte: 62,
                line: 2,
                col: 50,
              ),
            ),
          ))),
          body: Int(IntLit(Spanned(
            value: 0,
            span: Span(
              start: Position(
                src: Some(SourceId(1)),
                byte: 74,
                line: 3,
                col: 9,
              ),
              end: Position(
                src: Some(SourceId(1)),
                byte: 74,
                line: 3,
                col: 9,
              ),
            ),
          ))),
          span: Span(
            start: Position(
              src: Some(SourceId(1)),
              byte: 17,
              line: 2,
              col: 5,
            ),
            end: Position(
              src: Some(SourceId(1)),
              byte: 20,
              line: 2,
              col: 8,
            ),
          ),
          ty: Resolved(Function(FunctionTy(
            params: [
              Builtin(Int),
            ],
            ret: Builtin(Int),
          ))),
        )),
      ],
      span: Span(
        start: Position(
          src: Some(SourceId(1)),
          byte: 0,
          line: 1,
          col: 1,
        ),
        end: Position(
          src: Some(SourceId(1)),
          byte: 4,
          line: 1,
          col: 5,
        ),
      ),
      ty: Resolved(Class("Main")),
    ),
  ],
)
