tests/snapshots/typeck__fail_no_main_class-diagnostics.snap
---
source: tests/typeck.rs
description: "class NotMain {\n    main(): Object {\n        0\n    };\n};\n"
expression: "&diagnostics"
---
[
    Diagnostic {
        level: Error,
        message: DiagnosticMessage {
            span: None,
            message: "no `Main` class found",
        },
        source: Some(
            NoMainClass,
        ),
    },
]
